; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/common/extr_sa1111.c_sa1111_bus_resume.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/common/extr_sa1111.c_sa1111_bus_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.sa1111_dev = type { i32 }
%struct.sa1111_driver = type { i32 (%struct.sa1111_dev.0*)* }
%struct.sa1111_dev.0 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @sa1111_bus_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sa1111_bus_resume(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.sa1111_dev*, align 8
  %4 = alloca %struct.sa1111_driver*, align 8
  %5 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %2, align 8
  %6 = load %struct.device*, %struct.device** %2, align 8
  %7 = call %struct.sa1111_dev* @SA1111_DEV(%struct.device* %6)
  store %struct.sa1111_dev* %7, %struct.sa1111_dev** %3, align 8
  %8 = load %struct.device*, %struct.device** %2, align 8
  %9 = getelementptr inbounds %struct.device, %struct.device* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.sa1111_driver* @SA1111_DRV(i32 %10)
  store %struct.sa1111_driver* %11, %struct.sa1111_driver** %4, align 8
  store i32 0, i32* %5, align 4
  %12 = load %struct.sa1111_driver*, %struct.sa1111_driver** %4, align 8
  %13 = icmp ne %struct.sa1111_driver* %12, null
  br i1 %13, label %14, label %26

14:                                               ; preds = %1
  %15 = load %struct.sa1111_driver*, %struct.sa1111_driver** %4, align 8
  %16 = getelementptr inbounds %struct.sa1111_driver, %struct.sa1111_driver* %15, i32 0, i32 0
  %17 = load i32 (%struct.sa1111_dev.0*)*, i32 (%struct.sa1111_dev.0*)** %16, align 8
  %18 = icmp ne i32 (%struct.sa1111_dev.0*)* %17, null
  br i1 %18, label %19, label %26

19:                                               ; preds = %14
  %20 = load %struct.sa1111_driver*, %struct.sa1111_driver** %4, align 8
  %21 = getelementptr inbounds %struct.sa1111_driver, %struct.sa1111_driver* %20, i32 0, i32 0
  %22 = load i32 (%struct.sa1111_dev.0*)*, i32 (%struct.sa1111_dev.0*)** %21, align 8
  %23 = load %struct.sa1111_dev*, %struct.sa1111_dev** %3, align 8
  %24 = bitcast %struct.sa1111_dev* %23 to %struct.sa1111_dev.0*
  %25 = call i32 %22(%struct.sa1111_dev.0* %24)
  store i32 %25, i32* %5, align 4
  br label %26

26:                                               ; preds = %19, %14, %1
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}

declare dso_local %struct.sa1111_dev* @SA1111_DEV(%struct.device*) #1

declare dso_local %struct.sa1111_driver* @SA1111_DRV(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
